swap AfterPay logo and fix spacing

--- a/app/src/css/components/AfterpayModal.scss
+++ b/app/src/css/components/AfterpayModal.scss
@@ -6,6 +6,7 @@
   position: relative;
   left: -2px;
   padding: 10px 0;
+  width: 120px;
 }
 
 .AfterpayModal__content-block {
