--- a/app/src/css/components/ProductOptions.scss
+++ b/app/src/css/components/ProductOptions.scss
@@ -56,12 +56,9 @@
   margin-left: 10px;
 }
 
-.AfterPay__message {
-  margin-bottom: 6px;
-}
-
 .AfterPay__image-logo {
   position: relative;
   top: 8px;
   padding: 0 5px;
+  width: 100px;
 }
